# sanskrit-ocr

./: .gitignore  LICENSE  index.html  init.sh  requirements.txt
datagen/: README.md  check_sanskrit_fonts.py  generate_dataset.py  h5_to_parquet.py  init.sh  pyproject.toml  sample_sa.txt  sampler_dsv3.py  sampler_gemma3.py  sanskrit_font_grid.py  translate_bookcorpus.py
datagen/augmentations/: degradations.py  effects.py  generate_dataset.py  postprocess.py  render_book_page.py  render_parchment_leaf.py  render_random.py  render_text.py  renderer_defaults.py  rendering.py  sample_sa.txt
datagen/augmentations/rendering/: render_book_page.py  render_parchment_leaf.py
datagen/augmentations/templates/: book_page.html.jinja  parchment_leaf.html.jinja
datagen/fonts/Savitri/: Savitrin.pfb  Savitrin.pfm
datagen/fonts/Souve/: Souve100.pfb  Souve100.pfm  Souve101.pfb  Souve101.pfm  Souve102.pfb  Souve102.pfm  Souve103.pfb  Souve103.pfm  Souve15.pfb  Souve15.pfm  Souve99.pfb  Souve99.pfm
evals/: README.md  benchmark_modelapi.py  benchmark_tesseract.py  extract.py  metrics.py  results.csv  surya.py  test.py
training/: README.md  data.py  finetune.py  load_data.py  make_corpus.py  model.py  pyproject.toml  sampling_eval.py  tokenizer.py  train.py
