[tool.poetry]
name = "training"
version = "0.1.0"
description = "Train multimodal LLM for OCR"
authors = ["Rohan Pandey <rohan@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^3.5"
pillow = "^11.2"
torch = "2.7.0"
torchvision = "0.22.0"
sentencepiece = "0.2.0"
debugpy = "1.8.14"
wandb = "0.19.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
